<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_coordinator_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mall_bg_search_shape"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/mall_AppBarOverlay"
        app:elevation="@dimen/dp_6">

        <include layout="@layout/mall_search_toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/search_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mall_hot_search"
                android:textColor="@color/light_deep_red"
                android:textSize="@dimen/sp_16"
                android:layout_marginBottom="@dimen/dp_8" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/top_search_flow_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24">

                <TextView android:id="@+id/search_history_clear_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mall_clear_all"
                    android:textColor="@color/color88"
                    android:drawableStart="@drawable/mall_ic_clear_all_gone"
                    android:drawablePadding="@dimen/dp_6"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mall_history_search"
                    android:textColor="@color/colorPrimaryOverlay"
                    android:textSize="@dimen/sp_16"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/search_history_clear_all_tv" />
            </RelativeLayout>

            <TextView
                android:id="@+id/search_history_null_tint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mall_search_null_tint"
                android:textColor="@color/mall_color99"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_history_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@color/colorBackground" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
